crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_very_lengthy_one_line_match.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1049"
  total_lines="1"
  display_lines="0-0"
  pattern="search"
  glob="*.txt"
  reason="WARNING: Search results are INCOMPLETE — output exceeded the 1049 bytes size limit and was truncated. Showing 0 of 1 total matches. The displayed results do NOT represent all matches. Please use a more specific search pattern to ensure full coverage."
><![CDATA[]]>
</search_results>
